# LCR

./: AUTHORS  ChangeLog  README  autogen.sh  build  configure.ac
agent/: Makefile.am  agent.h  all-tests.scm  command.c  findkey.c  genkey.c  gpg-agent-w32info.rc  gpg-agent.c  gpg-agent.w32-manifest  sexp-secret.c
build-aux/: speedo.mk
build-aux/speedo/w32/: g4wihelp.c  inst.nsi  pkg-copyright.txt  wixlib.wxs
common/: all-tests.scm  ccparray.c  ccparray.h  comopt.c  comopt.h  compliance.c  compliance.h  exechelp-posix.c  exechelp-w32.c  exechelp.h  exectool.c  exectool.h  homedir.c  iobuf.c  kem.c  ksba-io-support.c  mkdir_p.c  mkdir_p.h  name-value.c  name-value.h  openpgp-fpr.c  openpgp-s2k.c  server-help.c  server-help.h  stringhelp.c  stringhelp.h  strlist.c  t-ccparray.c  t-exectool.c  t-iobuf.c  t-name-value.c  t-stringhelp.c  t-strlist.c  t-w32-cmdline.c  tlv-builder.c  tlv-parser.c  ttyio.c  userids.c  w32-cmdline.c  w32info-rc.h.in
dirmngr/: Makefile.am  OAUTHORS  certcache.c  certcache.h  dirmngr-client-w32info.rc  dirmngr-status.h  dirmngr-w32info.rc  dirmngr.c  dirmngr.h  dirmngr_ldap-w32info.rc  dirmngr_ldap.c  fakecrl.c  http.c  http.h  ks-action.c  ks-action.h  ks-engine-ldap.c  ks-engine.h  ldap-misc.c  ldap-misc.h  ldap-parse-uri.c  ldap-parse-uri.h  ldap-wrapper.c  ldap.c  loadswdb.c  server.c  t-http-basic.c  t-ldap-misc.c  t-ldap-parse-uri.c  t-support.c
doc/: dirmngr.texi  gnupg.texi  gpg-card.texi  wks.texi
g10/: Makefile.am  all-tests.scm  armor.c  build-packet.c  call-agent.c  call-dirmngr.c  call-keyboxd.c  card-util.c  cipher-aead.c  cipher-cfb.c  compress-bz2.c  compress.c  cpr.c  dearmor.c  decrypt-data.c  decrypt.c  delkey.c  ecdh.c  encrypt.c  exec.c  expand-group.c  export.c  free-packet.c  getkey.c  gpg-w32info.rc  gpg.w32-manifest  gpgsql.c  gpgsql.h  gpgv  gpgv-w32info.rc  gpgv.w32-manifest  helptext.c  import.c  kbnode.c  key-check.c  key-check.h  key-clean.c  key-clean.h  keydb-private.h  keydb.c  (+48 more)
g13/: all-tests.scm
kbx/: backend-cache.c  backend-kbx.c  backend-sqlite.c  backend-support.c  backend.h  frontend.c  frontend.h  kbx-client-util.c  kbx-client-util.h  kbxserver.c  keybox-fwddecl.h  keyboxd-w32info.rc  keyboxd.c
po/: ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  nb.po  nl.po  pl.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
regexp/: Makefile.am  parse-unidata.awk
scd/: app-geldkarte.c  app-nks.c  app-openpgp.c  app-p15.c  app-piv.c  scdaemon-w32info.rc  scdaemon.c
sm/: Makefile.am  certcheck.c  certdump.c  certreqgen.c  decrypt.c  encrypt.c  gpgsm-w32info.rc  gpgsm.c  gpgsm.w32-manifest  keydb.c  lcrsm.w32-manifest.in  minip12.c  passphrase.h  server.c  sign.c  t-minip12.c  verify.c
tests/: run-tests.scm
tests/cms/: Makefile.am  all-tests.scm  decrypt.scm  encrypt.scm  export.scm  gpgsm-defs.scm  import.scm  run-tests.scm  setup.scm  sign.scm  verify.scm
tests/gpgme/: Makefile.am  all-tests.scm  gpgme-defs.scm  run-tests.scm  setup.scm  wrap.scm
tests/gpgscm/: Makefile.am  ffi.scm  gnupg.scm  lib.scm  makefile.scm  repl.scm  t-child.scm  tests.scm  time.scm  xml.scm
tests/migrations/: Makefile.am  all-tests.scm  common.scm  extended-pkf.scm  from-classic.scm  issue2276.scm  run-tests.scm  setup.scm
tests/openpgp/: 4gb-packet.scm  all-tests.scm  armdetach.scm  armdetachm.scm  armencrypt.scm  armencryptp.scm  armor.scm  armsignencrypt.scm  armsigs.scm  clearsig.scm  compression.scm  conventional-mdc.scm  conventional.scm  decrypt-dsa.scm  decrypt-multifile.scm  decrypt-session-key.scm  decrypt-sym.scm  decrypt-unwrap-verify.scm  decrypt.scm  default-key.scm  defs.scm  delete-keys.scm  detach.scm  detachm.scm  ecc.scm  enarmor.scm  encrypt-dsa.scm  encrypt-multifile.scm  encrypt.scm  encryptp.scm  export.scm  genkey1024.scm  gpgconf.scm  gpgtar.scm  gpgv-forged-keyring.scm  gpgv.scm  import-revocation-certificate.scm  import.scm  issue2015.scm  issue2346.scm  (+24 more)
tests/tpm2dtests/: all-tests.scm  defs.scm  run-tests.scm  setup.scm  shell.scm
tools/: Makefile.am  call-dirmngr.c  call-dirmngr.h  card-call-scd.c  card-keys.c  card-misc.c  card-yubikey.c  ccidmon.c  gpg-auth  gpg-auth.c  gpg-authcode-sign.sh  gpg-card  gpg-card-w32info.rc  gpg-card.c  gpg-card.h  gpg-card.w32-manifest  gpg-card.w32-manifest.in  gpg-check-pattern-w32info.rc  gpg-check-pattern.c  gpg-check-pattern.w32-manifest  gpg-check-pattern.w32-manifest.in  gpg-connect-agent-w32info.rc  gpg-connect-agent.w32-manifest  gpg-connect-agent.w32-manifest.in  gpg-mail-tube.c  gpg-pair-tool  gpg-pair-tool.c  gpg-wks-client  gpg-wks-client-w32info.rc  gpg-wks-client.c  gpg-wks-client.w32-manifest  gpg-wks-server  gpg-wks.h  gpgconf-comp.c  gpgconf-w32info.rc  gpgconf.c  gpgconf.w32-manifest  gpgconf.w32-manifest.in  gpgtar-create.c  gpgtar-extract.c  (+14 more)
